[backend/frontend] Manage screens when a payload is deleted  (#1141)